--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,10 @@
 .carousel-size{
-  height: 70vh;
   background-color: rgb(233, 231, 231);
   padding: 10px;
 }
 .wh{
   width: 400px
+}
+.bor{
+  padding-left: 2px;
 }
